--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 
 <head>
 
-	
+	<meta property="og:description" content="Welcome to Macbuntu" />
+    <meta charset="UTF-8">
+    <title>Macbuntu</title>
+    <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1"/>
+    <!-- Meta Garbage -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Macbuntu" />
+    <meta name="description" content="Macbuntu">
+    <meta property="og:description" content="Macbuntu" />
+    <meta property="og:url" content="https://n3rdp0rt4l.gitlab.io/n3rdp0rt4l" />
+    <!--<meta property="og:url" content="http://n3rdp0rt4l.duckdns.org:8080" />-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <title>Macbuntu &#8211; The Best OS</title>
