--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta property="og:description" content="Welcome to Macbuntu" />
     <meta charset="UTF-8">
-    <title>Macbuntu</title>
+    <title>DragonLinux</title>
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1"/>
     <!-- Meta Garbage -->
     <meta property="og:type" content="website">
@@ -16,7 +16,7 @@
     <!--<meta property="og:url" content="http://n3rdp0rt4l.duckdns.org:8080" />-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-<title>Macbuntu &#8211; The Best OS</title>
+<title>DragonLinux &#8211; The Best OS</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
