--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
-<title>About Macbuntu &#8211; The Best OS</title>
+<title>About DragonLinux &#8211; The Best OS</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
@@ -495,7 +495,7 @@ width: 225px !important;
 	<li id="menu-item-832" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-832"><a href="https://answers.launchpad.net/">Make a question</a></li>
 </ul>
 </li>
-<li id="menu-item-2036" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2036"><a href="https://discord.com/invite/PrYXHb2p7s?event=988462851381420152">Help the project!</a></li>
+<li id="menu-item-2036" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2036"><a href="https://discord.gg/VhfM3UncBB">Help the project!</a></li>
 </ul>	</div>
 </div>
 
@@ -631,7 +631,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-b3c337d elementor-widget elementor-widget-heading" data-id="b3c337d" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Why Macbuntu?
+			<h2 class="elementor-heading-title elementor-size-default">Why DragonLinux?
 </h2>		</div>
 				</div>
 					</div>
@@ -644,7 +644,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-abeaf66 elementor-widget elementor-widget-text-editor" data-id="abeaf66" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Macbuntu is a distro of Ubuntu, meaning its easy enough for new users to go into it, but we gave it the customization we thought it needed to become<br />an OS that we, at the N3RDP0RT4L team, would use on our daily life.</p>						</div>
+							<p>DragonLinux is a distro of Mint, meaning its easy enough for new users to go into it, but we gave it the customization we thought it needed to become<br />an OS that we, at the N3RDP0RT4L team, would use on our daily life.</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -669,7 +669,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-b0f75c0 elementor-widget elementor-widget-text-editor" data-id="b0f75c0" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Macbuntu offers an easy to use, pretty and comfortable graphic enviroment in which you will find pre-installed apps, as well as ARM64 Support.</p>						</div>
+							<p>DragonLinux offers an easy to use, pretty and comfortable graphic enviroment in which you will find pre-installed apps, as well as ARM64 Support.</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -711,7 +711,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-c14b242 elementor-widget elementor-widget-text-editor" data-id="c14b242" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>The Macbuntu project has been a reality since October 2018. Since then, we have grown into a big community that you are invited to be a part of in our Discord channel.</p>						</div>
+							<p>The Dragon Linux project has been a reality since October 2018. Since then, we have grown into a big community that you are invited to be a part of in our Discord channel.</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -737,27 +737,27 @@ width: 225px !important;
 				<div class="elementor-widget-container">
 					<div class="elementor-tabs">
 			<div class="elementor-tabs-wrapper" role="tablist" >
-									<div id="elementor-tab-title-6781" class="elementor-tab-title elementor-tab-desktop-title" aria-selected="true" data-tab="1" role="tab" tabindex="0" aria-controls="elementor-tab-content-6781" aria-expanded="false">Why did you create Macbuntu?</div>
+									<div id="elementor-tab-title-6781" class="elementor-tab-title elementor-tab-desktop-title" aria-selected="true" data-tab="1" role="tab" tabindex="0" aria-controls="elementor-tab-content-6781" aria-expanded="false">Why did you create Dragon Linux?</div>
 									<div id="elementor-tab-title-6782" class="elementor-tab-title elementor-tab-desktop-title" aria-selected="false" data-tab="2" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6782" aria-expanded="false">Minimum specs required</div>
 									<div id="elementor-tab-title-6783" class="elementor-tab-title elementor-tab-desktop-title" aria-selected="false" data-tab="3" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6783" aria-expanded="false">Recommended  required specs</div>
-									<div id="elementor-tab-title-6784" class="elementor-tab-title elementor-tab-desktop-title" aria-selected="false" data-tab="4" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6784" aria-expanded="false"> How did you create Macbuntu?</div>
+									<div id="elementor-tab-title-6784" class="elementor-tab-title elementor-tab-desktop-title" aria-selected="false" data-tab="4" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6784" aria-expanded="false"> How did you create Dragon Linux?</div>
 									<div id="elementor-tab-title-6785" class="elementor-tab-title elementor-tab-desktop-title" aria-selected="false" data-tab="5" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6785" aria-expanded="false">XFCE version? Arch version?</div>
 									<div id="elementor-tab-title-6786" class="elementor-tab-title elementor-tab-desktop-title" aria-selected="false" data-tab="6" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6786" aria-expanded="false">ARM version?</div>
 									<div id="elementor-tab-title-6787" class="elementor-tab-title elementor-tab-desktop-title" aria-selected="false" data-tab="7" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6787" aria-expanded="false">How can I help  with the project?</div>
 							</div>
 			<div class="elementor-tabs-content-wrapper" role="tablist" aria-orientation="vertical">
-									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="true" data-tab="1" role="tab" tabindex="0" aria-controls="elementor-tab-content-6781" aria-expanded="false">Why did you create Macbuntu?</div>
+									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="true" data-tab="1" role="tab" tabindex="0" aria-controls="elementor-tab-content-6781" aria-expanded="false">Why did you create Dragon Linux?</div>
 					<div id="elementor-tab-content-6781" class="elementor-tab-content elementor-clearfix" data-tab="1" role="tabpanel" aria-labelledby="elementor-tab-title-6781" tabindex="0" hidden="false"><p>We really did this as a school project on our free time, cause we wanted to create an OS that was to our exact liking, but then we invested more and more time in the project<br />like, built the website, released the OS on the internet just to see if people liked it, etc<br />and as it was a good name to play with, we were lucky enough to find people who liked it</p></div>
 									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="2" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6782" aria-expanded="false">Minimum specs required</div>
 					<div id="elementor-tab-content-6782" class="elementor-tab-content elementor-clearfix" data-tab="2" role="tabpanel" aria-labelledby="elementor-tab-title-6782" tabindex="0" hidden="hidden"><p>1.5 GHz processor<br />2 GB of system memory (RAM)<br />60 GB of disk space</p></div>
 									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="3" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6783" aria-expanded="false">Recommended  required specs</div>
 					<div id="elementor-tab-content-6783" class="elementor-tab-content elementor-clearfix" data-tab="3" role="tabpanel" aria-labelledby="elementor-tab-title-6783" tabindex="0" hidden="hidden"><p>4GB or more of RAM<br />64-bit capable Intel and AMD processors<br />UEFI PCs booting in CSM mode.<br />Modern Intel-based Apple Macs</p></div>
-									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="4" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6784" aria-expanded="false"> How did you create Macbuntu?</div>
-					<div id="elementor-tab-content-6784" class="elementor-tab-content elementor-clearfix" data-tab="4" role="tabpanel" aria-labelledby="elementor-tab-title-6784" tabindex="0" hidden="hidden"><p>We created Macbuntu by using cubic, which is a GUI wizard to create a customized Live ISO image for Ubuntu based distributions.</p><p>you can try cubic yourself by installing it into your linux OS.<br />https://launchpad.net/cubic</p></div>
+									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="4" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6784" aria-expanded="false"> How did you create Dragon Linux?</div>
+					<div id="elementor-tab-content-6784" class="elementor-tab-content elementor-clearfix" data-tab="4" role="tabpanel" aria-labelledby="elementor-tab-title-6784" tabindex="0" hidden="hidden"><p>We created Dragon Linux by using cubic, which is a GUI wizard to create a customized Live ISO image for Ubuntu based distributions.</p><p>you can try cubic yourself by installing it into your linux OS.<br />https://launchpad.net/cubic</p></div>
 									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="5" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6785" aria-expanded="false">XFCE version? Arch version?</div>
-					<div id="elementor-tab-content-6785" class="elementor-tab-content elementor-clearfix" data-tab="5" role="tabpanel" aria-labelledby="elementor-tab-title-6785" tabindex="0" hidden="hidden"><p>Our desktop version uses Unity DE, and our ARM64 version uses XFCE. As of today, we have no intentions on making more than two versions of Macbuntu, as we feel it would affect the general quality.</p></div>
+					<div id="elementor-tab-content-6785" class="elementor-tab-content elementor-clearfix" data-tab="5" role="tabpanel" aria-labelledby="elementor-tab-title-6785" tabindex="0" hidden="hidden"><p>Our desktop version uses the cinnamon DE. As of today, we have no intentions on making more than two versions of Dragon Linux, as we feel it would affect the general quality.</p></div>
 									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="6" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6786" aria-expanded="false">ARM version?</div>
-					<div id="elementor-tab-content-6786" class="elementor-tab-content elementor-clearfix" data-tab="6" role="tabpanel" aria-labelledby="elementor-tab-title-6786" tabindex="0" hidden="hidden"><p>We have a ARM64 version out.</p></div>
+					<div id="elementor-tab-content-6786" class="elementor-tab-content elementor-clearfix" data-tab="6" role="tabpanel" aria-labelledby="elementor-tab-title-6786" tabindex="0" hidden="hidden"><p>We do not have a ARM based version out as of writing.</p></div>
 									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="7" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6787" aria-expanded="false">How can I help  with the project?</div>
 					<div id="elementor-tab-content-6787" class="elementor-tab-content elementor-clearfix" data-tab="7" role="tabpanel" aria-labelledby="elementor-tab-title-6787" tabindex="0" hidden="hidden"><p>Suggestions are always welcomed! you can join our discord community and mesagge us there, if you want to contribute more directly into the project, feel free to add us on discord so we can talk about it.</p></div>
 							</div>
