--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
-<title>About DragonLinux &#8211; The Best OS</title>
+<title>About Dragon Linux &#8211; The Best OS</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
@@ -631,7 +631,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-b3c337d elementor-widget elementor-widget-heading" data-id="b3c337d" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Why DragonLinux?
+			<h2 class="elementor-heading-title elementor-size-default">Why Dragon Linux?
 </h2>		</div>
 				</div>
 					</div>
@@ -644,7 +644,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-abeaf66 elementor-widget elementor-widget-text-editor" data-id="abeaf66" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>DragonLinux is a distro of Mint, meaning its easy enough for new users to go into it, but we gave it the customization we thought it needed to become<br />an OS that we, at the N3RDP0RT4L team, would use on our daily life.</p>						</div>
+							<p>Dragon Linux is a distro of Mint, meaning its easy enough for new users to go into it, but we gave it the customization we thought it needed to become<br />an OS that we, at the N3RDP0RT4L team, would use on our daily life.</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -669,7 +669,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-b0f75c0 elementor-widget elementor-widget-text-editor" data-id="b0f75c0" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>DragonLinux offers an easy to use, pretty and comfortable graphic enviroment in which you will find pre-installed apps, as well as ARM64 Support.</p>						</div>
+							<p>Dragon Linux offers an easy to use, pretty and comfortable graphic enviroment in which you will find pre-installed apps, as well as ARM64 Support.</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -755,7 +755,7 @@ width: 225px !important;
 									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="4" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6784" aria-expanded="false"> How did you create Dragon Linux?</div>
 					<div id="elementor-tab-content-6784" class="elementor-tab-content elementor-clearfix" data-tab="4" role="tabpanel" aria-labelledby="elementor-tab-title-6784" tabindex="0" hidden="hidden"><p>We created Dragon Linux by using cubic, which is a GUI wizard to create a customized Live ISO image for Ubuntu based distributions.</p><p>you can try cubic yourself by installing it into your linux OS.<br />https://launchpad.net/cubic</p></div>
 									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="5" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6785" aria-expanded="false">XFCE version? Arch version?</div>
-					<div id="elementor-tab-content-6785" class="elementor-tab-content elementor-clearfix" data-tab="5" role="tabpanel" aria-labelledby="elementor-tab-title-6785" tabindex="0" hidden="hidden"><p>Our desktop version uses the cinnamon DE. As of today, we have no intentions on making more than two versions of Dragon Linux, as we feel it would affect the general quality.</p></div>
+					<div id="elementor-tab-content-6785" class="elementor-tab-content elementor-clearfix" data-tab="5" role="tabpanel" aria-labelledby="elementor-tab-title-6785" tabindex="0" hidden="hidden"><p>Our desktop version uses the cinnamon DE. As of today, we have no intentions on making more than one version of Dragon Linux, as we feel it would affect the general quality.</p></div>
 									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="6" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6786" aria-expanded="false">ARM version?</div>
 					<div id="elementor-tab-content-6786" class="elementor-tab-content elementor-clearfix" data-tab="6" role="tabpanel" aria-labelledby="elementor-tab-title-6786" tabindex="0" hidden="hidden"><p>We do not have a ARM based version out as of writing.</p></div>
 									<div class="elementor-tab-title elementor-tab-mobile-title" aria-selected="false" data-tab="7" role="tab" tabindex="-1" aria-controls="elementor-tab-content-6787" aria-expanded="false">How can I help  with the project?</div>
@@ -787,8 +787,8 @@ width: 225px !important;
 		data-section="neve_sidebar-widgets-footer-three-widgets"
 		data-item-id="footer-three-widgets">
 		<div class="widget-area">
-		<div id="shortcodes-ultimate-7" class="widget shortcodes-ultimate"><div class="textwidget"><a href="https://discord.com/invite/PrYXHb2p7s?event=988462851381420152" class="su-button su-button-style-default" style="color:#ffffff;background-color:transparent;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px" target="_blank" rel="noopener noreferrer" id="discordlink"><span style="color:#ffffff;padding:0px 30px;font-size:22px;line-height:44px;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px;text-shadow:none;-moz-text-shadow:none;-webkit-text-shadow:none"> <i class="fa-brands fa-discord"></i> 
- Macbuntu OS</span></a></div></div>	</div>
+		<div id="shortcodes-ultimate-7" class="widget shortcodes-ultimate"><div class="textwidget"><a href="https://discord.gg/VhfM3UncBB" class="su-button su-button-style-default" style="color:#ffffff;background-color:transparent;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px" target="_blank" rel="noopener noreferrer" id="discordlink"><span style="color:#ffffff;padding:0px 30px;font-size:22px;line-height:44px;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px;text-shadow:none;-moz-text-shadow:none;-webkit-text-shadow:none"> <i class="fa-brands fa-discord"></i> 
+ Dragon Linux</span></a></div></div>	</div>
 	</div>
 
 </div><div class="builder-item col-4 desktop-center tablet-center mobile-center offset-1"><div class="item--inner builder-item--footer-four-widgets"
@@ -796,7 +796,7 @@ width: 225px !important;
 		data-item-id="footer-four-widgets">
 		<div class="widget-area">
 		<div id="shortcodes-ultimate-10" class="widget shortcodes-ultimate"><div class="textwidget"><a href="index.html" class="su-button su-button-style-default" style="color:#ffffff;background-color:transparent;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px" target="_self" id="discordlink"><span style="color:#ffffff;padding:0px 30px;font-size:22px;line-height:44px;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px;text-shadow:none;-moz-text-shadow:none;-webkit-text-shadow:none">  
- About Macbuntu</span></a></div></div>	</div>
+ About Dragon Linux</span></a></div></div>	</div>
 	</div>
 
 </div><div class="builder-item hfg-item-last col-3 desktop-center tablet-center mobile-center offset-1"><div class="item--inner builder-item--footer-one-widgets"
