--- a/downloads/index.html
+++ b/downloads/index.html
@@ -630,7 +630,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-268eae3 elementor-widget elementor-widget-text-editor" data-id="268eae3" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;none&quot;,&quot;_animation_delay&quot;:1200}" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><div class="sdm_download_button_box_default"><div class="sdm_download_link"><a href="https://sourceforge.net/projects/ubuntu-tmux-prootfs/files/latest/download" class="sdm_download pink" title="Macbuntu ARM" >Download Macbuntu</a></div></div></p>						</div>
+							<p><div class="sdm_download_button_box_default"><div class="sdm_download_link"><a href="https://sourceforge.net/projects/sujix-linux/files/latest/download" class="sdm_download pink" title="Macbuntu ARM" >Download Dragon Linux</a></div></div></p>						</div>
 				</div>
 				<div class="elementor-element elementor-element-d48244a elementor-widget elementor-widget-text-editor" data-id="d48244a" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
@@ -646,7 +646,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-330d405 elementor-widget elementor-widget-text-editor" data-id="330d405" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;none&quot;,&quot;_animation_delay&quot;:1400}" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><div class="sdm_download_button_box_default"><div class="sdm_download_link"><a href="https://sourceforge.net/projects/ubuntu-tmux-prootfs/" class="sdm_download pink" title="UwUntu Github" >Macbuntu ARM Sourceforge</a></div></div></p>						</div>
+							<p><div class="sdm_download_button_box_default"><div class="sdm_download_link"><a href="https://sourceforge.net/projects/sujix-linux" class="sdm_download pink" title="UwUntu Github" >Dragon Linux Sourceforge</a></div></div></p>						</div>
 				</div>
 					</div>
 		</div>
@@ -725,8 +725,8 @@ width: 225px !important;
 		data-section="neve_sidebar-widgets-footer-three-widgets"
 		data-item-id="footer-three-widgets">
 		<div class="widget-area">
-		<div id="shortcodes-ultimate-7" class="widget shortcodes-ultimate"><div class="textwidget"><a href="https://discord.com/invite/PrYXHb2p7s?event=988462851381420152" class="su-button su-button-style-default" style="color:#ffffff;background-color:transparent;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px" target="_blank" rel="noopener noreferrer" id="discordlink"><span style="color:#ffffff;padding:0px 30px;font-size:22px;line-height:44px;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px;text-shadow:none;-moz-text-shadow:none;-webkit-text-shadow:none"> <i class="fa-brands fa-discord"></i> 
- Macbuntu OS</span></a></div></div>	</div>
+		<div id="shortcodes-ultimate-7" class="widget shortcodes-ultimate"><div class="textwidget"><a href="https://discord.gg/VhfM3UncBB" class="su-button su-button-style-default" style="color:#ffffff;background-color:transparent;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px" target="_blank" rel="noopener noreferrer" id="discordlink"><span style="color:#ffffff;padding:0px 30px;font-size:22px;line-height:44px;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px;text-shadow:none;-moz-text-shadow:none;-webkit-text-shadow:none"> <i class="fa-brands fa-discord"></i> 
+ Dragon Linux</span></a></div></div>	</div>
 	</div>
 
 </div><div class="builder-item col-4 desktop-center tablet-center mobile-center offset-1"><div class="item--inner builder-item--footer-four-widgets"
@@ -734,7 +734,7 @@ width: 225px !important;
 		data-item-id="footer-four-widgets">
 		<div class="widget-area">
 		<div id="shortcodes-ultimate-10" class="widget shortcodes-ultimate"><div class="textwidget"><a href="../about/index.html" class="su-button su-button-style-default" style="color:#ffffff;background-color:transparent;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px" target="_self" id="discordlink"><span style="color:#ffffff;padding:0px 30px;font-size:22px;line-height:44px;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px;text-shadow:none;-moz-text-shadow:none;-webkit-text-shadow:none">  
- About Macbuntu</span></a></div></div>	</div>
+ About Dragon Linux</span></a></div></div>	</div>
 	</div>
 
 </div><div class="builder-item hfg-item-last col-3 desktop-center tablet-center mobile-center offset-1"><div class="item--inner builder-item--footer-one-widgets"
