--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta property="og:description" content="Welcome to Macbuntu" />
     <meta charset="UTF-8">
-    <title>DragonLinux</title>
+    <title>Dragon Linux</title>
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1"/>
     <!-- Meta Garbage -->
     <meta property="og:type" content="website">
@@ -503,7 +503,7 @@ width: 225px !important;
 	<li id="menu-item-832" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-832"><a href="https://answers.launchpad.net/">Make a question</a></li>
 </ul>
 </li>
-<li id="menu-item-2036" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2036"><a href="https://discord.com/invite/PrYXHb2p7s?event=988462851381420152">Help the project!</a></li>
+<li id="menu-item-2036" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2036"><a href="https://discord.gg/VhfM3UncBB">Help the project!</a></li>
 </ul>	</div>
 </div>
 
@@ -622,7 +622,7 @@ width: 225px !important;
 				</div>
 				<div class="elementor-element elementor-element-3f95029 elementor-widget elementor-widget-heading" data-id="3f95029" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h1 class="elementor-heading-title elementor-size-default">Macbuntu ARM64 Now Available!</h1>		</div>
+			<h1 class="elementor-heading-title elementor-size-default">Dragon Linux!</h1>		</div>
 				</div>
 					</div>
 		</div>
@@ -634,7 +634,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-7275a1a elementor-widget elementor-widget-heading" data-id="7275a1a" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">New release: ARM64 Porn Star</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">New release: RAWR!</h2>		</div>
 				</div>
 					</div>
 		</div>
@@ -718,8 +718,8 @@ width: 225px !important;
 		data-section="neve_sidebar-widgets-footer-three-widgets"
 		data-item-id="footer-three-widgets">
 		<div class="widget-area">
-		<div id="shortcodes-ultimate-7" class="widget shortcodes-ultimate"><div class="textwidget"><a href="https://discord.com/invite/PrYXHb2p7s?event=988462851381420152" class="su-button su-button-style-default" style="color:#ffffff;background-color:transparent;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px" target="_blank" rel="noopener noreferrer" id="discordlink"><span style="color:#ffffff;padding:0px 30px;font-size:22px;line-height:44px;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px;text-shadow:none;-moz-text-shadow:none;-webkit-text-shadow:none"> <i class="fa-brands fa-discord"></i> 
- Macbuntu OS</span></a></div></div>	</div>
+		<div id="shortcodes-ultimate-7" class="widget shortcodes-ultimate"><div class="textwidget"><a href="https://discord.gg/VhfM3UncBB" class="su-button su-button-style-default" style="color:#ffffff;background-color:transparent;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px" target="_blank" rel="noopener noreferrer" id="discordlink"><span style="color:#ffffff;padding:0px 30px;font-size:22px;line-height:44px;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px;text-shadow:none;-moz-text-shadow:none;-webkit-text-shadow:none"> <i class="fa-brands fa-discord"></i> 
+ Dragon Linux</span></a></div></div>	</div>
 	</div>
 
 </div><div class="builder-item col-4 desktop-center tablet-center mobile-center offset-1"><div class="item--inner builder-item--footer-four-widgets"
@@ -727,7 +727,7 @@ width: 225px !important;
 		data-item-id="footer-four-widgets">
 		<div class="widget-area">
 		<div id="shortcodes-ultimate-10" class="widget shortcodes-ultimate"><div class="textwidget"><a href="about/index.html" class="su-button su-button-style-default" style="color:#ffffff;background-color:transparent;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px" target="_self" id="discordlink"><span style="color:#ffffff;padding:0px 30px;font-size:22px;line-height:44px;border-color:transparent;border-radius:12px;-moz-border-radius:12px;-webkit-border-radius:12px;text-shadow:none;-moz-text-shadow:none;-webkit-text-shadow:none">  
- About Macbuntu</span></a></div></div>	</div>
+ About Dragon Linux</span></a></div></div>	</div>
 	</div>
 
 </div><div class="builder-item hfg-item-last col-3 desktop-center tablet-center mobile-center offset-1"><div class="item--inner builder-item--footer-one-widgets"
@@ -756,7 +756,7 @@ width: 225px !important;
 		data-section="neve_sidebar-widgets-footer-two-widgets"
 		data-item-id="footer-two-widgets">
 		<div class="widget-area">
-		<div id="text-18" class="widget widget_text">			<div class="textwidget"><p><a href="https://n3rdp0rt4l-hq.gitlab.io/n3rdp0rt4l/">N3RDP0RT4L-HQ</a>        <a href="https://satan.surge.sh">SATAN</a></p>
+		<div id="text-18" class="widget widget_text">			<div class="textwidget"><p><a href="https://freedom-hq.github.io/freedom-hq">N3RDP0RT4L-HQ</a>        <a href="https://satan.surge.sh">SATAN</a></p>
 </div>
 		</div>	</div>
 	</div>
