--- a/downloads/index.html
+++ b/downloads/index.html
@@ -491,7 +491,7 @@ width: 225px !important;
 	<li id="menu-item-832" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-832"><a href="https://answers.launchpad.net/">Make a question</a></li>
 </ul>
 </li>
-<li id="menu-item-2036" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2036"><a href="https://discord.com/invite/PrYXHb2p7s?event=988462851381420152">Help the project!</a></li>
+<li id="menu-item-2036" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2036"><a href="https://discord.gg/VhfM3UncBB">Help the project!</a></li>
 </ul>	</div>
 </div>
 
