--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--<meta property="og:url" content="http://n3rdp0rt4l.duckdns.org:8080" />-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-<title>DragonLinux &#8211; The Best OS</title>
+<title>Dragon Linux &#8211; The Best OS</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
@@ -756,7 +756,7 @@ width: 225px !important;
 		data-section="neve_sidebar-widgets-footer-two-widgets"
 		data-item-id="footer-two-widgets">
 		<div class="widget-area">
-		<div id="text-18" class="widget widget_text">			<div class="textwidget"><p><a href="https://freedom-hq.github.io/freedom-hq">N3RDP0RT4L-HQ</a>        <a href="https://satan.surge.sh">SATAN</a></p>
+		<div id="text-18" class="widget widget_text">			<div class="textwidget"><p><a href="https://freedom-hq.github.io/freedom-hq">FREEDOM-HQ</a>        <a href="https://satan.surge.sh">SATAN</a></p>
 </div>
 		</div>	</div>
 	</div>
