--- a/about/index.html
+++ b/about/index.html
@@ -644,7 +644,7 @@ width: 225px !important;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-abeaf66 elementor-widget elementor-widget-text-editor" data-id="abeaf66" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Dragon Linux is a distro of Mint, meaning its easy enough for new users to go into it, but we gave it the customization we thought it needed to become<br />an OS that we, at the N3RDP0RT4L team, would use on our daily life.</p>						</div>
+							<p>Dragon Linux is a distro of Mint, meaning its easy enough for new users to go into it, but we gave it the customization we thought it needed to become<br />an OS that we, at the FREEDOM-HQ team, would use on our daily life.</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -825,7 +825,7 @@ width: 225px !important;
 		data-section="neve_sidebar-widgets-footer-two-widgets"
 		data-item-id="footer-two-widgets">
 		<div class="widget-area">
-		<div id="text-18" class="widget widget_text">			<div class="textwidget"><p><a href="https://n3rdp0rt4l-hq.gitlab.io/n3rdp0rt4l/">N3RDP0RT4L-HQ</a>        <a href="https://satan.surge.sh">SATAN</a></p>
+		<div id="text-18" class="widget widget_text">			<div class="textwidget"><p><a href="https://freedom-hq.github.io/freedom-hq/">FREEDOM-HQ</a>        <a href="https://satan.surge.sh">SATAN</a></p>
 </div>
 		</div>	</div>
 	</div>
