--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ width: 225px !important;
 		data-item-id="primary-menu">
 	<div class="nv-nav-wrap">
 	<div role="navigation" class="style-plain nav-menu-primary"
-			aria-label="Primary Menu"> T H A N K S 
+			aria-label="Primary Menu">
 
 		<ul id="nv-primary-navigation-top" class="primary-menu-ul nav-ul"><li id="menu-item-1709" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-627 current_page_item menu-item-1709"><a href="index.html" aria-current="page">Home</a></li>
 <li id="menu-item-2039" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2039"><a href="about/index.html">About us</a></li>
