chore: update site

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link href="assets/css/all.min.css" type="text/css" rel="stylesheet">
 <link href="assets/css/mermaid.css" type="text/css" rel="stylesheet">
 <link href="assets/css/form-styles.css" type="text/css" rel="stylesheet">
-<link href="assets//css/login.css" type="text/css" rel="stylesheet">
+<link href="assets/css/login.css" type="text/css" rel="stylesheet">
 <link href="assets/css/spectre.min.css" type="text/css" rel="stylesheet">
 <link href="assets/css/spectre-exp.min.css" type="text/css" rel="stylesheet">
 <link href="assets/css/theme.min.css" type="text/css" rel="stylesheet">
